cool.output
Terminals unused in grammar

   ELSE
   FI
   IF
   LOOP
   POOL
   THEN
   WHILE
   CASE
   ESAC
   OF
   DARROW
   NEW
   ISVOID
   NOT
   LE
   ERROR


State 65 conflicts: 3 shift/reduce
State 72 conflicts: 3 shift/reduce
State 91 conflicts: 3 shift/reduce
State 103 conflicts: 3 shift/reduce
State 106 conflicts: 3 shift/reduce
State 111 conflicts: 3 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS TYPEID '{' '}' ';'
    7      | CLASS TYPEID INHERITS TYPEID '{' '}' ';'

    8 feature_list: feature ';'
    9             | feature ';' feature_list

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}'
   11        | OBJECTID '(' ')' ':' TYPEID '{' expression '}'
   12        | OBJECTID ':' TYPEID
   13        | OBJECTID ':' TYPEID ASSIGN expression

   14 formal_list: formal
   15            | formal ',' formal_list

   16 formal: OBJECTID ':' TYPEID

   17 expression_list: expression ';'
   18                | expression ';' expression_list

   19 expression_list_as_args: expression
   20                        | expression ',' expression_list_as_args

   21 let_expression: LET OBJECTID ':' TYPEID IN expression
   22               | LET OBJECTID ':' TYPEID ASSIGN expression IN expression
   23               | LET OBJECTID ':' TYPEID ',' let_init_list IN expression
   24               | LET OBJECTID ':' TYPEID ASSIGN expression ',' let_init_list IN expression

   25 let_init_list: OBJECTID ':' TYPEID
   26              | OBJECTID ':' TYPEID ',' let_init_list
   27              | OBJECTID ':' TYPEID ASSIGN expression
   28              | OBJECTID ':' TYPEID ASSIGN expression ',' let_init_list

   29 expression: '(' expression ')'
   30           | INT_CONST
   31           | BOOL_CONST
   32           | STR_CONST
   33           | expression '+' expression
   34           | let_expression
   35           | '{' expression_list '}'
   36           | OBJECTID ASSIGN expression
   37           | expression '.' OBJECTID '(' ')'
   38           | expression '.' OBJECTID '(' expression_list_as_args ')'
   39           | expression '@' TYPEID '.' OBJECTID '(' ')'
   40           | expression '@' TYPEID '.' OBJECTID '(' expression_list_as_args ')'
   41           | OBJECTID
   42           | OBJECTID '(' ')'
   43           | OBJECTID '(' expression_list_as_args ')'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10 11 29 37 38 39 40 42 43
')' (41) 10 11 29 37 38 39 40 42 43
'+' (43) 33
',' (44) 15 20 23 24 26 28
'.' (46) 37 38 39 40
':' (58) 10 11 12 13 16 21 22 23 24 25 26 27 28
';' (59) 4 5 6 7 8 9 17 18
'@' (64) 39 40
'{' (123) 4 5 6 7 10 11 35
'}' (125) 4 5 6 7 10 11 35
error (256)
CLASS (258) 4 5 6 7
ELSE (259)
FI (260)
IF (261)
IN (262) 21 22 23 24
INHERITS (263) 5 7
LET (264) 21 22 23 24
LOOP (265)
POOL (266)
THEN (267)
WHILE (268)
CASE (269)
ESAC (270)
OF (271)
DARROW (272)
NEW (273)
ISVOID (274)
STR_CONST <symbol> (275) 32
INT_CONST <symbol> (276) 30
BOOL_CONST <boolean> (277) 31
TYPEID <symbol> (278) 4 5 6 7 10 11 12 13 16 21 22 23 24 25 26 27 28
    39 40
OBJECTID <symbol> (279) 10 11 12 13 16 21 22 23 24 25 26 27 28 36 37
    38 39 40 41 42 43
ASSIGN (280) 13 22 24 27 28 36
NOT (281)
LE (282)
ERROR (283)


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
program <program> (40)
    on left: 1, on right: 0
class_list <classes> (41)
    on left: 2 3, on right: 1 3
class <class_> (42)
    on left: 4 5 6 7, on right: 2 3
feature_list <features> (43)
    on left: 8 9, on right: 4 5 9
feature <feature> (44)
    on left: 10 11 12 13, on right: 8 9
formal_list <formals> (45)
    on left: 14 15, on right: 10 15
formal <formal> (46)
    on left: 16, on right: 14 15
expression_list <expressions> (47)
    on left: 17 18, on right: 18 35
expression_list_as_args <expressions> (48)
    on left: 19 20, on right: 20 38 40 43
let_expression <expression> (49)
    on left: 21 22 23 24, on right: 34
let_init_list <expression> (50)
    on left: 25 26 27 28, on right: 23 24 26 28
expression <expression> (51)
    on left: 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43, on right:
    10 11 13 17 18 19 20 21 22 23 24 27 28 29 33 36 37 38 39 40


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS . TYPEID '{' '}' ';'
    7      | CLASS . TYPEID INHERITS TYPEID '{' '}' ';'

    TYPEID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 7


State 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 5

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS TYPEID . '{' '}' ';'
    7      | CLASS TYPEID . INHERITS TYPEID '{' '}' ';'

    INHERITS  shift, and go to state 8
    '{'       shift, and go to state 9


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 8

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'
    7      | CLASS TYPEID INHERITS . TYPEID '{' '}' ';'

    TYPEID  shift, and go to state 10


State 9

    4 class: CLASS TYPEID '{' . feature_list '}' ';'
    6      | CLASS TYPEID '{' . '}' ';'

    OBJECTID  shift, and go to state 11
    '}'       shift, and go to state 12

    feature_list  go to state 13
    feature       go to state 14


State 10

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'
    7      | CLASS TYPEID INHERITS TYPEID . '{' '}' ';'

    '{'  shift, and go to state 15


State 11

   10 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}'
   11        | OBJECTID . '(' ')' ':' TYPEID '{' expression '}'
   12        | OBJECTID . ':' TYPEID
   13        | OBJECTID . ':' TYPEID ASSIGN expression

    '('  shift, and go to state 16
    ':'  shift, and go to state 17


State 12

    6 class: CLASS TYPEID '{' '}' . ';'

    ';'  shift, and go to state 18


State 13

    4 class: CLASS TYPEID '{' feature_list . '}' ';'

    '}'  shift, and go to state 19


State 14

    8 feature_list: feature . ';'
    9             | feature . ';' feature_list

    ';'  shift, and go to state 20


State 15

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'
    7      | CLASS TYPEID INHERITS TYPEID '{' . '}' ';'

    OBJECTID  shift, and go to state 11
    '}'       shift, and go to state 21

    feature_list  go to state 22
    feature       go to state 14


State 16

   10 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}'
   11        | OBJECTID '(' . ')' ':' TYPEID '{' expression '}'

    OBJECTID  shift, and go to state 23
    ')'       shift, and go to state 24

    formal_list  go to state 25
    formal       go to state 26


State 17

   12 feature: OBJECTID ':' . TYPEID
   13        | OBJECTID ':' . TYPEID ASSIGN expression

    TYPEID  shift, and go to state 27


State 18

    6 class: CLASS TYPEID '{' '}' ';' .

    $default  reduce using rule 6 (class)


State 19

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 28


State 20

    8 feature_list: feature ';' .
    9             | feature ';' . feature_list

    OBJECTID  shift, and go to state 11

    $default  reduce using rule 8 (feature_list)

    feature_list  go to state 29
    feature       go to state 14


State 21

    7 class: CLASS TYPEID INHERITS TYPEID '{' '}' . ';'

    ';'  shift, and go to state 30


State 22

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'

    '}'  shift, and go to state 31


State 23

   16 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 32


State 24

   11 feature: OBJECTID '(' ')' . ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 33


State 25

   10 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}'

    ')'  shift, and go to state 34


State 26

   14 formal_list: formal .
   15            | formal . ',' formal_list

    ','  shift, and go to state 35

    $default  reduce using rule 14 (formal_list)


State 27

   12 feature: OBJECTID ':' TYPEID .
   13        | OBJECTID ':' TYPEID . ASSIGN expression

    ASSIGN  shift, and go to state 36

    $default  reduce using rule 12 (feature)


State 28

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 29

    9 feature_list: feature ';' feature_list .

    $default  reduce using rule 9 (feature_list)


State 30

    7 class: CLASS TYPEID INHERITS TYPEID '{' '}' ';' .

    $default  reduce using rule 7 (class)


State 31

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 37


State 32

   16 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 38


State 33

   11 feature: OBJECTID '(' ')' ':' . TYPEID '{' expression '}'

    TYPEID  shift, and go to state 39


State 34

   10 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 40


State 35

   15 formal_list: formal ',' . formal_list

    OBJECTID  shift, and go to state 23

    formal_list  go to state 41
    formal       go to state 26


State 36

   13 feature: OBJECTID ':' TYPEID ASSIGN . expression

    LET         shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    let_expression  go to state 49
    expression      go to state 50


State 37

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 38

   16 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 16 (formal)


State 39

   11 feature: OBJECTID '(' ')' ':' TYPEID . '{' expression '}'

    '{'  shift, and go to state 51


State 40

   10 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}'

    TYPEID  shift, and go to state 52


State 41

   15 formal_list: formal ',' formal_list .

    $default  reduce using rule 15 (formal_list)


State 42

   21 let_expression: LET . OBJECTID ':' TYPEID IN expression
   22               | LET . OBJECTID ':' TYPEID ASSIGN expression IN expression
   23               | LET . OBJECTID ':' TYPEID ',' let_init_list IN expression
   24               | LET . OBJECTID ':' TYPEID ASSIGN expression ',' let_init_list IN expression

    OBJECTID  shift, and go to state 53


State 43

   32 expression: STR_CONST .

    $default  reduce using rule 32 (expression)


State 44

   30 expression: INT_CONST .

    $default  reduce using rule 30 (expression)


State 45

   31 expression: BOOL_CONST .

    $default  reduce using rule 31 (expression)


State 46

   36 expression: OBJECTID . ASSIGN expression
   41           | OBJECTID .
   42           | OBJECTID . '(' ')'
   43           | OBJECTID . '(' expression_list_as_args ')'

    ASSIGN  shift, and go to state 54
    '('     shift, and go to state 55

    $default  reduce using rule 41 (expression)


State 47

   35 expression: '{' . expression_list '}'

    LET         shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    expression_list  go to state 56
    let_expression   go to state 49
    expression       go to state 57


State 48

   29 expression: '(' . expression ')'

    LET         shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    let_expression  go to state 49
    expression      go to state 58


State 49

   34 expression: let_expression .

    $default  reduce using rule 34 (expression)


State 50

   13 feature: OBJECTID ':' TYPEID ASSIGN expression .
   33 expression: expression . '+' expression
   37           | expression . '.' OBJECTID '(' ')'
   38           | expression . '.' OBJECTID '(' expression_list_as_args ')'
   39           | expression . '@' TYPEID '.' OBJECTID '(' ')'
   40           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_as_args ')'

    '+'  shift, and go to state 59
    '.'  shift, and go to state 60
    '@'  shift, and go to state 61

    $default  reduce using rule 13 (feature)


State 51

   11 feature: OBJECTID '(' ')' ':' TYPEID '{' . expression '}'

    LET         shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    let_expression  go to state 49
    expression      go to state 62


State 52

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expression '}'

    '{'  shift, and go to state 63


State 53

   21 let_expression: LET OBJECTID . ':' TYPEID IN expression
   22               | LET OBJECTID . ':' TYPEID ASSIGN expression IN expression
   23               | LET OBJECTID . ':' TYPEID ',' let_init_list IN expression
   24               | LET OBJECTID . ':' TYPEID ASSIGN expression ',' let_init_list IN expression

    ':'  shift, and go to state 64


State 54

   36 expression: OBJECTID ASSIGN . expression

    LET         shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    let_expression  go to state 49
    expression      go to state 65


State 55

   42 expression: OBJECTID '(' . ')'
   43           | OBJECTID '(' . expression_list_as_args ')'

    LET         shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48
    ')'         shift, and go to state 66

    expression_list_as_args  go to state 67
    let_expression           go to state 49
    expression               go to state 68


State 56

   35 expression: '{' expression_list . '}'

    '}'  shift, and go to state 69


State 57

   17 expression_list: expression . ';'
   18                | expression . ';' expression_list
   33 expression: expression . '+' expression
   37           | expression . '.' OBJECTID '(' ')'
   38           | expression . '.' OBJECTID '(' expression_list_as_args ')'
   39           | expression . '@' TYPEID '.' OBJECTID '(' ')'
   40           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_as_args ')'

    ';'  shift, and go to state 70
    '+'  shift, and go to state 59
    '.'  shift, and go to state 60
    '@'  shift, and go to state 61


State 58

   29 expression: '(' expression . ')'
   33           | expression . '+' expression
   37           | expression . '.' OBJECTID '(' ')'
   38           | expression . '.' OBJECTID '(' expression_list_as_args ')'
   39           | expression . '@' TYPEID '.' OBJECTID '(' ')'
   40           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_as_args ')'

    ')'  shift, and go to state 71
    '+'  shift, and go to state 59
    '.'  shift, and go to state 60
    '@'  shift, and go to state 61


State 59

   33 expression: expression '+' . expression

    LET         shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    let_expression  go to state 49
    expression      go to state 72


State 60

   37 expression: expression '.' . OBJECTID '(' ')'
   38           | expression '.' . OBJECTID '(' expression_list_as_args ')'

    OBJECTID  shift, and go to state 73


State 61

   39 expression: expression '@' . TYPEID '.' OBJECTID '(' ')'
   40           | expression '@' . TYPEID '.' OBJECTID '(' expression_list_as_args ')'

    TYPEID  shift, and go to state 74


State 62

   11 feature: OBJECTID '(' ')' ':' TYPEID '{' expression . '}'
   33 expression: expression . '+' expression
   37           | expression . '.' OBJECTID '(' ')'
   38           | expression . '.' OBJECTID '(' expression_list_as_args ')'
   39           | expression . '@' TYPEID '.' OBJECTID '(' ')'
   40           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_as_args ')'

    '}'  shift, and go to state 75
    '+'  shift, and go to state 59
    '.'  shift, and go to state 60
    '@'  shift, and go to state 61


State 63

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' . expression '}'

    LET         shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    let_expression  go to state 49
    expression      go to state 76


State 64

   21 let_expression: LET OBJECTID ':' . TYPEID IN expression
   22               | LET OBJECTID ':' . TYPEID ASSIGN expression IN expression
   23               | LET OBJECTID ':' . TYPEID ',' let_init_list IN expression
   24               | LET OBJECTID ':' . TYPEID ASSIGN expression ',' let_init_list IN expression

    TYPEID  shift, and go to state 77


State 65

   33 expression: expression . '+' expression
   36           | OBJECTID ASSIGN expression .
   37           | expression . '.' OBJECTID '(' ')'
   38           | expression . '.' OBJECTID '(' expression_list_as_args ')'
   39           | expression . '@' TYPEID '.' OBJECTID '(' ')'
   40           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_as_args ')'

    '+'  shift, and go to state 59
    '.'  shift, and go to state 60
    '@'  shift, and go to state 61

    '+'       [reduce using rule 36 (expression)]
    '.'       [reduce using rule 36 (expression)]
    '@'       [reduce using rule 36 (expression)]
    $default  reduce using rule 36 (expression)


State 66

   42 expression: OBJECTID '(' ')' .

    $default  reduce using rule 42 (expression)


State 67

   43 expression: OBJECTID '(' expression_list_as_args . ')'

    ')'  shift, and go to state 78


State 68

   19 expression_list_as_args: expression .
   20                        | expression . ',' expression_list_as_args
   33 expression: expression . '+' expression
   37           | expression . '.' OBJECTID '(' ')'
   38           | expression . '.' OBJECTID '(' expression_list_as_args ')'
   39           | expression . '@' TYPEID '.' OBJECTID '(' ')'
   40           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_as_args ')'

    ','  shift, and go to state 79
    '+'  shift, and go to state 59
    '.'  shift, and go to state 60
    '@'  shift, and go to state 61

    $default  reduce using rule 19 (expression_list_as_args)


State 69

   35 expression: '{' expression_list '}' .

    $default  reduce using rule 35 (expression)


State 70

   17 expression_list: expression ';' .
   18                | expression ';' . expression_list

    LET         shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48

    $default  reduce using rule 17 (expression_list)

    expression_list  go to state 80
    let_expression   go to state 49
    expression       go to state 57


State 71

   29 expression: '(' expression ')' .

    $default  reduce using rule 29 (expression)


State 72
